# AIContext

./: README.md  pyproject.toml
.github/workflows/: ci.yml
aicontext/: agent.py  canvas_skill.py  cli.py  ingest_skill.py  ingester.py  records.py  skill_builder.py  syncthing.py  viewer.py
aicontext-canvas/: SKILL.md  protocol.md
aicontext-canvas/renderers/canvas-card/: SKILL.md
aicontext-canvas/usecases/today-in-history/: SKILL.md
aicontext-ingest/: SKILL.md  protocol.md
aicontext-ingest/sources/: amazon_browsing.md  amazon_cart.md  amazon_media.md  amazon_orders.md  amazon_search.md  chatgpt.md  claude_web.md  google_chrome_history.md  google_takeout_activity.md
aicontext/resources/: query.py
aicontext/sources/: __init__.py  base.py  browser_chrome.py  browser_dia.py  browser_edge.py
~/.agents/skills/: aicontext-ingest
